2005-03-12  Gary Cramblitt (PhantomsDad)
        * Change toolbar buttons on Jobs tab to push buttons so they can be used from keyboard.
          Clean up screen layout and add WhatsThis help.
        * Added sayText convenience method to kspeech.h, which combines setText and startText
          into a single call.  Be sure to update kdelibs/interfaces/kspeech before attempting to
          compile kttsd:
            cd kdelibs/interfaces/kspeech
            cvs up
            make install
        * When starting or restoring KTTSMgr, defaults to Jobs tab if visible.
        * When clicking on Jobs tab, warn user if there are config changes not yet saved.

2005-03-09  Gary Cramblitt (PhantomsDad)
        * Add Hold and Resume items to systray menu.

2005-03-06  Gary Cramblitt (PhantomsDad)
        * Consolidated all the translation catalogues into single catalog called "kttsd".

2005-03-05  Gary Cramblitt (PhantomsDad)
        * Add support for Kiswahili, Zulu, and Ibibio Festival languages.  Get them at
          http://www.llsti.org/index.htm.  Note that Ibibio does not have an assigned two-letter
          (iso 639) code, so I gave it Zulu (zu), which is probably as bad as saying that English
          is French, but it cannot be helped.  The Ibibio and Zulu voices will only speak valid
          Ibibio or Zulu text, so the Test button is non-functional for them until translators
          provide translations.

2005-03-02  Gary Cramblitt (PhantomsDad)
        * BUG:100600 Fix for messages and warnings not spoken when text job is paused.
        * Bug.  Talker Chooser claims it can autoconfigure itself, but it cannot really.
        * Allow to remove any Filter.

2005-02-17  Gary Cramblitt (PhantomsDad)
        * Remove festival/ and festivalcs/ plugins from source tree.  AFAIK, these plugins don't work
          and nobody is using them.  And these are confusing packagers who think we have a build